z-indexes fixed for buttons and absolute elements

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -28,5 +28,5 @@
 
 .footerNavLink {
 	font-family: var(--amaticbold);
-	z-index: 101;
+	z-index: 9;
 }
