--- a/styles/MobileMenu.module.css
+++ b/styles/MobileMenu.module.css
@@ -2,17 +2,14 @@
 	position: absolute;
 	width: 100vw;
 	height: 100vh;
-	/* background-color: var(--text-secondary); */
 	backdrop-filter: blur(0);
-	z-index: 100;
-	/* opacity: 0; */
+	z-index: 9;
 	transition: backdrop-filter 0.4s ease-in;
-	padding: var(--s0) var(--s2) var(--s3) var(--s2);
+	padding: var(--s0) var(--s2) var(--s4) var(--s2);
 }
 
 .mobileMenuOpen {
-	/* opacity: 1; */
-	backdrop-filter: blur(30px);
+	backdrop-filter: blur(40px);
 }
 
 .mobileNav {
@@ -23,6 +20,7 @@
 
 .mobileNav ul li {
 	font-family: var(--amaticbold);
+	font-size: var(--s1);
 	opacity: 0;
 	transform: translateX(-500px);
 	transition: transform 1s ease-in-out;
@@ -43,6 +41,11 @@
 	transition-delay: 0.6s;
 }
 
+.mobileMenuOpen .mobileNav ul > *:nth-child(4),
+.mobileNav ul > *:nth-child(4) {
+	transition-delay: 0.7s;
+}
+
 .mobileMenuOpen .mobileNav ul li {
 	transform: translateX(0);
 	opacity: 1;
@@ -50,7 +53,7 @@
 }
 
 .mobileNavSocials {
-	margin-block-start: var(--s0);
+	margin-block-start: var(--s2);
 }
 
 .mobileNavSocials > * {
@@ -62,4 +65,18 @@
 	transform: translateY(0);
 	transition: transform 0.4s ease-in-out;
 	transition-delay: 1s;
+}
+
+.authorMenu {
+	border-block-start: 1px solid var(--text-primary);
+	padding-block-start: var(--s-1);
+}
+
+.authorMenu ul li a,
+.authorMenu ul li button {
+	color: var(--secondary);
+}
+
+.authorMenu ul li button {
+	background-color: transparent;
 }
